# Projet_P4_Kiffy

./: README.md  dirdyn.c
dataR/: KIFFY06.mbs  Livrable2_gr06.mbs
symbolicR/: CMakeLists.txt
userfctR/: CMakeLists.txt  mbs_kine_wheel_motorbike.c  mbs_motorbike_contact.c  mbs_motorbike_contact.h  user_IO.c  user_IO.h  user_JointForces.c  user_model.c  user_model.h
workR/: CMakeLists.txt
workR/src/: main.c
